# P-DBM-GUI

./: DBM_GUI.ui  LICENSE  README.md  actions.py  actions_1D.py  actions_2D.py  calculation_1D.py  calculation_2D.py  dbm_functions.py  functions.py  gui_v1.1.py  main.py  pyproject.toml  requirements.txt  tab1.py  tab2.py
Application_Module/: Boundary_condition.json  DBM_GUI.ui  actions_1D.py  functions.py  gui_v1.1.py  main.py  pyproject.toml  requirements.txt  run.py
